@@ -51,7 +51,6 @@ def warpscan(ng,g0,gmax,rect1=1,rect2=1,rect3=1,rect4=1):
     return '''
     warpscan other=${SOURCES[1]} niter=100
     ng=%d dg=%g g0=%g rect1=%d rect2=%d rect3=%d rect4=%d |
-    math output="(input+0.5)^4" |
     window''' % (ng,dg,g0,rect1,rect2,rect3,rect4)
 
 def warp2gamma(ss):
